# fast-finetuned-forcefields

./: README.md  environment.yml  module_args.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
colmena/: README.md
colmena/initial/: README.md  config.py  local-test-dft-mctbp.sh  local-test-dft-md.sh  local-test-dft.sh  local-test-mctbp.sh  local-test.sh  perlmutter-mp2.sh  redis.conf  run.py  theta-lambda-baseline.sh  theta-lambda-funcx.sh  theta-lambda-parsl.sh  theta-test-parsl.sh  theta-test.sh
envs/: environment-cpu.yml  environment-cuda116.yml
fff/: version.py
fff/learning/: base.py  spk.py
fff/sampling/: __init__.py  base.py  md.py  mhm.py
fff/simulation/: __init__.py  mctbp.py  md.py  tamm.py  utils.py
notebooks/: README.md
notebooks/cc-dehyd/: README.md
notebooks/hydronet/: README.md
notebooks/initial-database/: compare-methods.ipynb  run_clusters.py
notebooks/initial-models/: README.md
notebooks/introduce-methane/: 0_add-methane.ipynb  1_run-md-trajectories.ipynb
notebooks/mofs/: README.md
notebooks/nwchem-evaluation/: 0_get-example-clusters.ipynb  run_benchmarks.py
notebooks/psi4-integration/: 0_update-atomref-in-model.ipynb  1_test-molecular-dynamics.ipynb  1_train-with-spk.ipynb  2_test-molecular-dynamics.ipynb  README.md
notebooks/psi4-integration-spk/: 1_train-with-spk.ipynb
notebooks/train-pyg/: train_with_modules.py
tests/: conftest.py  test_gc.py  test_model_msg.py  test_sampling.py  test_simulation.py  test_spk.py  test_tamm.py
utils/: infer.py  models.py  train.py
(+135 files in other folders)
